templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: elad
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: simple-web.com
    http:
      paths:
      - path: /elad
        pathType: Prefix
        backend:
          service:
            name: interview-assignment-app-chart
            port:
              name: http
